puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Models/ContactUsModel.cs.pp
using System;
using System.ComponentModel.DataAnnotations;

namespace $rootnamespace$.Models
{
    public partial class ContactUsModel
    {
        [MinLength(5)]
        [Required]
        public string Name { get; set; }

        [DataType(DataType.EmailAddress)]
        [Required]
        public string Email { get; set; }

        [MinLength(5)]
        [DataType(DataType.MultilineText)]
        public string Message { get; set; }
    }
}